# discoride

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  audio.cfg  configure  configure_linux  ui.cfg
dr2/: .hg_archival.txt  .hgignore  .hgtags  CMakeLists.txt  COPYING  INSTALL  INSTALL_linux  TODO
dr2/proxy/: bootstrap.py  dump.sql  genproxy_c.py  genproxy_h.py  proxy.db
dr2/ressources/: glfw-2.7.6.tar.bz2  uncrustifyLinux.cfg
dr2/ressources/CMake/Modules/: FindMpg123.cmake  FindPortaudio.cmake  FindTaglib.cmake
dr2/ressources/taglib-1.7/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt
dr2/ressources/taglib-1.7/bindings/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/bindings/c/: CMakeLists.txt  Makefile  cmake_install.cmake  libtag_c.so.0.0.0
dr2/ressources/taglib-1.7/examples/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/taglib/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/taglib/ape/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/taglib/asf/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/taglib/flac/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/taglib/mp4/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/taglib/mpc/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/taglib/mpeg/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/taglib/mpeg/id3v1/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/taglib/mpeg/id3v2/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/taglib/ogg/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/taglib/ogg/flac/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/taglib/ogg/speex/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/taglib/ogg/vorbis/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/taglib/riff/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/taglib/riff/aiff/: Makefile  (+1 more)
dr2/ressources/taglib-1.7/taglib/toolkit/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/taglib/trueaudio/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/taglib/wavpack/: Makefile  cmake_install.cmake
dr2/ressources/taglib-1.7/tests/: Makefile  cmake_install.cmake
dr2/setup/: setup_disco.py
dr2/src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c
dr2/src/conf/: CMakeLists.txt  Makefile  cmake_install.cmake  raudio_config.c  rdisplay_config.c  rplaylist_config.c  rstyle_config.c
dr2/src/gui/: CMakeLists.txt  Makefile  cmake_install.cmake  rpanel_dock0.c  rpanel_dock1.c  rpanel_mix.c  rpanel_playlist.c  rpanel_sidebar.c  rpanel_waves.c  rpanels.c  rpanels.h
dr2/src/lib/: CMakeLists.txt  Makefile  cmake_install.cmake  raudio.c  raudio.h  raudio_callbacks.c  raudio_decode.c  raudio_meter.h  raudio_playbuffer_cb.c  rbutton.c  rbutton.h  rcairogl.c  rcairogl.h  rchan.c  rchan.h  rcolor.c  rcolor.h  rcpu.c  rcpu.h  rdata.c  rdata.h  rdeckgauge.c  rdeckgauge.h  rdeckwave4.c  rdeckwave4.h  rdisplay.c  rdisplay.h  rframe.c  rframe.h  rglfw.c  rglfw.h  rglfw_cairo.c  rglfw_cairo.h  rglu.h  rhslider2.c  rhslider2.h  ride.c  ride.h  rjog.c  rjog.h  (+31 more)
dr3/: CMakeCache.txt  CMakeLists.txt
dr3/libs/: CMakeLists.txt  defs.h
dr3/libs/audio/: audio_backend.cpp  audio_backend.h  audio_engine.cpp  track.cpp  track.h
dr3/libs/audio/backends/: CMakeLists.txt
dr3/libs/audio/backends/portaudio/: CMakeLists.txt
dr3/libs/audio/backends/rtaudio/: CMakeLists.txt  audio_rtaudio.cpp
dr3/libs/audio/loaders/mpg123/: CMakeLists.txt  loader_mpg123.h
dr3/libs/audio/process/: audio_callbacks_c.h  cb00dummy.c  cb02zero.c  cb03sin.c
dr3/libs/audio/proxy/: audio_proxy.c
dr3/libs/conf/: CMakeLists.txt  drconfig.c  drconfig.h
dr3/libs/trace/: CMakeLists.txt
dr3/libs/ui/: kh.h  ui.cpp  ui.h  ui_defs.h  wid.h  wid_painter.cpp  xtime.h
dr3/libs/ui/backends/: CMakeLists.txt
dr3/libs/ui/backends/fltk/: CMakeLists.txt  ui_fltk.cpp  ui_fltk.h
dr3/libs/ui/backends/glfw/: CMakeLists.txt  ui_glfw.cpp
dr3/libs/ui/backends/minimal/: ui_minimal.h
dr3/libs/ui/zzz_old/: rDim.h  rGlfw.h_old  rKey.h  rRect.h  rUi.cpp_old  rUi.h  rWid.cpp_old  rWid_old.h
dr3/libs/ui/zzz_old/wids_old/: CMakeLists.txt  drButtonPlay.c  drButtonPlay.h  drFrame.c  drFrame.h
dr3/main/: CMakeLists.txt  dr3.cpp  drPanels.h_old
dr3/samples/: CMakeLists.txt
dr3/samples/sample00_drGlwOpen/: CMakeLists.txt  sample00_drGlfwOpen.cpp
dr3/samples/sample01_drRtAudioOpen/: CMakeLists.txt  sample01_drRtAudioOpen.cpp
dr3/samples/sample02_drPortaudioOpen/: CMakeLists.txt  sample02_drPortaudioOpen.cpp
dr3/samples/sample03_drMpg123Load/: CMakeLists.txt  sample03_drMpg123Load.cpp
dr3/samples/sample04_drMpg123_Portaudio/: CMakeLists.txt  sample04_drMpg123_Portaudio.cpp
dr3/samples/sample05_drMpg123_Rtaudio/: CMakeLists.txt  sample05_drMpg123_Rtaudio.cpp
dr3/samples/sample06_drMinimalOpen/: CMakeLists.txt  sample06_drMinimalOpen.cpp
dr3/samples/sample07_drFltk/: CMakeLists.txt  sample07_drFltk.cpp
dr3/samples/sample08_drMinimalMix1/: CMakeLists.txt  sample08.cpp  sample08_drFltkMix1.cpp  sample08_drMinimalMix1.cpp
dr3/samples/sample09_lua/: CMakeLists.txt  sample09_lua.c
dr3/samples/sample10_lacewing/: CMakeLists.txt  sample10_lacewing.c
dr3/tests/: CMakeLists.txt
dr3/tests/TU/: CMakeLists.txt  TU_drDisplayMgr_loadUi.c  main.c  tests.h
dr3/wids_dr/: CMakeLists.txt  drWids.c  drWids.h
external_libs/glfw/glfw-2.7.7/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
external_libs/glfw/glfw-2.7.7/examples/: boing  gears  heightmap  listmodes  mipmaps  mtbench  mthello  particles  pong3d  splitview  triangle  wave
external_libs/glfw/glfw-2.7.7/lib/x11/: x11_init.c
external_libs/glfw/glfw-2.7.7/nbproject/: configurations.xml  project.xml
external_libs/glfw/glfw-2.7.7/nbproject/private/: Default.properties  configurations.xml
external_libs/glfw/glfw-2.7.7/tests/: accuracy  defaults  events  fsaa  fsinput  iconify  joysticks  peter  reopen  tearing  version
external_libs/tinycthread/: CMakeLists.txt  buildit_linux
(+167 files in other folders)
