add_subdirectory (sample00_drGlwOpen)
add_subdirectory (sample02_drPortaudioOpen)
add_subdirectory (sample03_drMpg123Load)
add_subdirectory (sample04_drMpg123_Portaudio)
add_subdirectory (sample06_drMinimalOpen)
add_subdirectory (sample07_drFltk)
add_subdirectory (sample08_drMinimalMix1)
add_subdirectory (sample10_drFltkUv)

